ISIS-3167: update site index

--- a/antora/components/refguide-index/modules/applib/pages/index/annotation/CollectionLayout.adoc
+++ b/antora/components/refguide-index/modules/applib/pages/index/annotation/CollectionLayout.adoc
@@ -17,7 +17,7 @@ Layout hints for collections.
   int paged() default -1;     // <.>
   String sequence() default "";     // <.>
   @SuppressWarnings("rawtypes")
-Class sortedBy() default Comparator.class;     // <.>
+Class<? extends Comparator> sortedBy() default Comparator.class;     // <.>
 }
 ----
 
