--- a/antora/components/refguide-index/modules/viewer/pages/index/commons/applib/services/userprof/UserProfileUiService.adoc
+++ b/antora/components/refguide-index/modules/viewer/pages/index/commons/applib/services/userprof/UserProfileUiService.adoc
@@ -1,27 +1,29 @@
-= IsisModuleExtCommandLogPersistenceJdo
+= UserProfileUiService
 :Notice: Licensed to the Apache Software Foundation (ASF) under one or more contributor license agreements. See the NOTICE file distributed with this work for additional information regarding copyright ownership. The ASF licenses this file to you under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at. http://www.apache.org/licenses/LICENSE-2.0 . Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR  CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
+
+Returns a UI model to represent the currently logged in user.
+
+This is backed by the _org.apache.isis.applib.services.user.UserMemento_ obtained from _UserService#currentUser()_ API, but could be presented in various ways.
 
 == API
 
 [source,java]
-.IsisModuleExtCommandLogPersistenceJdo.java
+.UserProfileUiService.java
 ----
-class IsisModuleExtCommandLogPersistenceJdo {
-  public static final String NAMESPACE;
-  public static final String SCHEMA;
-  FixtureScript teardownFixture()     // <.>
+interface UserProfileUiService {
+  UserProfileUiModel userProfile()     // <.>
 }
 ----
 
-<.> xref:#teardownFixture_[teardownFixture()]
+<.> xref:#userProfile_[userProfile()]
 +
 --
-Note that this is _NOT_ an implementation of the _ModuleWithFixtures#getTeardownFixture()_ API; but is provided to allow manual teardown if required.
+A UI model to represent the currently logged in user.
 --
 
 == Members
 
-[#teardownFixture_]
-=== teardownFixture()
+[#userProfile_]
+=== userProfile()
 
-Note that this is _NOT_ an implementation of the _ModuleWithFixtures#getTeardownFixture()_ API; but is provided to allow manual teardown if required.
+A UI model to represent the currently logged in user.
