--- a/antora/components/refguide-index/modules/commons/pages/index/collections/Can.adoc
+++ b/antora/components/refguide-index/modules/commons/pages/index/collections/Can.adoc
@@ -70,6 +70,7 @@ interface Can<T> {
   boolean isCardinalityMultiple()
   Collector<T, ?, Can<T>> toCan()
   List<T> toList()     // <.>
+  List<T> toArrayList()     // <.>
   Set<T> toSet()     // <.>
   Set<T> toSet(Consumer<T> onDuplicated)     // <.>
   C toCollection(Supplier<C> collectionFactory)     // <.>
@@ -253,6 +254,7 @@ Let _n_ be the number of elements in _other_ . Returns whether the first _n_ ele
 Let _n_ be the number of elements in _other_ . Returns whether the last _n_ elements of this _Can_ are element-wise equal to _other_ .
 --
 <.> xref:#toList_[toList()]
+<.> xref:#toArrayList_[toArrayList()]
 <.> xref:#toSet_[toSet()]
 <.> xref:#toSet_Consumer[toSet(Consumer)]
 <.> xref:#toCollection_Supplier[toCollection(Supplier)]
@@ -471,6 +473,9 @@ Let _n_ be the number of elements in _other_ . Returns whether the last _n_ elem
 
 [#toList_]
 === toList()
+
+[#toArrayList_]
+=== toArrayList()
 
 [#toSet_]
 === toSet()
