--- a/antora/components/refguide-index/modules/core/pages/index/transaction/changetracking/EntityChangeTracker.adoc
+++ b/antora/components/refguide-index/modules/core/pages/index/transaction/changetracking/EntityChangeTracker.adoc
@@ -30,12 +30,12 @@ Publishing support: for object stores to enlist an object that has just been cre
 <.> xref:#enlistUpdating_ManagedObject_Can[enlistUpdating(ManagedObject, Can)]
 +
 --
-Publishing support: for object stores to enlist an object that is about to be updated, capturing the pre-modification values of the properties of the _ManagedObject_ .
+Publishing support: for object stores to enlist an object that is about to be updated, capturing the pre-modification values of the properties of the xref:refguide:core:index/metamodel/object/ManagedObject.adoc[ManagedObject] .
 --
 <.> xref:#enlistDeleting_ManagedObject[enlistDeleting(ManagedObject)]
 +
 --
-Publishing support: for object stores to enlist an object that is about to be deleted, capturing the pre-deletion value of the properties of the _ManagedObject_ .
+Publishing support: for object stores to enlist an object that is about to be deleted, capturing the pre-deletion value of the properties of the xref:refguide:core:index/metamodel/object/ManagedObject.adoc[ManagedObject] .
 --
 <.> xref:#incrementLoaded_ManagedObject[incrementLoaded(ManagedObject)]
 +
@@ -60,7 +60,7 @@ The post-modification values are captured when the transaction commits.
 [#enlistUpdating_ManagedObject_Can]
 === enlistUpdating(ManagedObject, Can)
 
-Publishing support: for object stores to enlist an object that is about to be updated, capturing the pre-modification values of the properties of the _ManagedObject_ .
+Publishing support: for object stores to enlist an object that is about to be updated, capturing the pre-modification values of the properties of the xref:refguide:core:index/metamodel/object/ManagedObject.adoc[ManagedObject] .
 
 The post-modification values are captured when the transaction commits.
 
@@ -69,7 +69,7 @@ Overload as an optimization for ORMs (specifically, JPA) where already have acce
 [#enlistDeleting_ManagedObject]
 === enlistDeleting(ManagedObject)
 
-Publishing support: for object stores to enlist an object that is about to be deleted, capturing the pre-deletion value of the properties of the _ManagedObject_ .
+Publishing support: for object stores to enlist an object that is about to be deleted, capturing the pre-deletion value of the properties of the xref:refguide:core:index/metamodel/object/ManagedObject.adoc[ManagedObject] .
 
 The post-modification values are captured when the transaction commits. In the case of deleted objects, a dummy value `'[DELETED]'` is used as the post-modification value.
 
