--- a/antora/components/refguide-index/modules/extensions/pages/index/commandlog/jpa/IsisModuleExtCommandLogPersistenceJpa.adoc
+++ b/antora/components/refguide-index/modules/extensions/pages/index/commandlog/jpa/IsisModuleExtCommandLogPersistenceJpa.adoc
@@ -9,7 +9,19 @@
 class IsisModuleExtCommandLogPersistenceJpa {
   public static final String NAMESPACE;
   public static final String SCHEMA;
-  FixtureScript getTeardownFixture()
+  FixtureScript teardownFixture()     // <.>
 }
 ----
 
+<.> xref:#teardownFixture_[teardownFixture()]
++
+--
+Note that this is _NOT_ an implementation of the _ModuleWithFixtures#getTeardownFixture()_ API; but is provided to allow manual teardown if required.
+--
+
+== Members
+
+[#teardownFixture_]
+=== teardownFixture()
+
+Note that this is _NOT_ an implementation of the _ModuleWithFixtures#getTeardownFixture()_ API; but is provided to allow manual teardown if required.
