--- a/antora/components/refguide-index/modules/extensions/pages/index/secman/jdo/IsisModuleExtSecmanPersistenceJdo.adoc
+++ b/antora/components/refguide-index/modules/extensions/pages/index/secman/jdo/IsisModuleExtSecmanPersistenceJdo.adoc
@@ -7,6 +7,19 @@
 .IsisModuleExtSecmanPersistenceJdo.java
 ----
 class IsisModuleExtSecmanPersistenceJdo {
+  FixtureScript teardownFixture()     // <.>
 }
 ----
 
+<.> xref:#teardownFixture_[teardownFixture()]
++
+--
+Note that this is _NOT_ an implementation of the _ModuleWithFixtures#getTeardownFixture()_ API; but is provided to allow manual teardown if required.
+--
+
+== Members
+
+[#teardownFixture_]
+=== teardownFixture()
+
+Note that this is _NOT_ an implementation of the _ModuleWithFixtures#getTeardownFixture()_ API; but is provided to allow manual teardown if required.
