--- a/antora/components/refguide-index/modules/extensions/pages/index/secman/jpa/IsisModuleExtSecmanPersistenceJpa.adoc
+++ b/antora/components/refguide-index/modules/extensions/pages/index/secman/jpa/IsisModuleExtSecmanPersistenceJpa.adoc
@@ -7,7 +7,19 @@
 .IsisModuleExtSecmanPersistenceJpa.java
 ----
 class IsisModuleExtSecmanPersistenceJpa {
-  FixtureScript getTeardownFixture()
+  FixtureScript teardownFixture()     // <.>
 }
 ----
 
+<.> xref:#teardownFixture_[teardownFixture()]
++
+--
+Note that this is _NOT_ an implementation of the _ModuleWithFixtures#getTeardownFixture()_ API; but is provided to allow manual teardown if required.
+--
+
+== Members
+
+[#teardownFixture_]
+=== teardownFixture()
+
+Note that this is _NOT_ an implementation of the _ModuleWithFixtures#getTeardownFixture()_ API; but is provided to allow manual teardown if required.
